Sat Oct 12 18:24 2013 CDT
    * lib/user.js: Fix bad chatMsg packet causing exceptions

Sat Oct 12 15:53 2013 CDT
    * lib/channel.js: Add a try-catch to playlist loading to catch
      the mysterious error that's been coming up (corrupt pl?)

Mon Oct 07 19:00 2013 CDT
    * lib/channel.js: Rearrange the callback order to prevent database
      lookups from racing with the playlist queue.
    * tests/naokosimulator2013.js: Flood the first 10 videos all at once.
      Should provide better test coverage for race conditions (especially
      on localhost where the latency is ~0)

Mon Oct 07 10:02 2013 CDT
    * lib/channel.js: Fix several cases where an unregistered channel
      might attempt to make a database call which then fails.

Mon Oct 07 00:08 2013 CDT
    * lib/playlist.js: Fix /clean not behaving properly (actually was a
      consequence of the remove() function)
    * lib/get-info.js: Send more specific error messages
    * www/assets/js/callbacks.js: Minor fix to the queueFail callback

Sun Oct 06 01:42 2013 CDT
    * lib/channel.js, www/assets/js/callbacks.js: Include the link that
      failed with the queueFail packet.  Clicking the "+ n more" tag
      shows all links that failed for stacked messages
    * lib/utilities.js: Add a formatLink function

Sat Oct 05 20:41 2013 CDT
    * lib/user.js: Fix a bug where duplicate guestnames were allowed with
      different capitalizations

Thu Oct 03 22:09 2013 CDT
    * www/assets/js/ui.js: Use sortable("cancel") to remove the need for
      the `moveby` field of the movement packet
    * www/assets/js/util.js, www/assets/js/callbacks.js, lib/channel.js:
      Remove references to moveby

Thu Oct 03 22:05 2013 CDT
    * lib/channel.js, lib/playlist.js: Fix 'next' bumping not properly
      telling clients that the old item was deleted

Wed Oct 02 22:25 2013 CDT
    * www/channel.html, www/assets/js/ui.js, www/assets/js/callbacks.js:
      Add a small toggle for the MOTD

Wed Oct 02 09:35 2013 CDT