@@ -362,8 +362,10 @@ Channel.prototype.readLog = function (filterIp, callback) {
 }
 
 Channel.prototype.tryReadLog = function (user) {
-    if(user.rank < 3)
+    if(user.rank < 3) {
+        user.kick("Attempted readChanLog with insufficient permission");
         return;
+    }
 
     var filterIp = true;
     if(user.global_rank >= 255)
@@ -623,6 +625,7 @@ Channel.prototype.tryNameBan = function(actor, name) {
 Channel.prototype.unbanName = function(actor, name) {
     var self = this;
     if(!self.hasPermission(actor, "ban")) {
+        actor.kick("Attempted unban with insufficient permission");
         return false;
     }
 
@@ -730,8 +733,10 @@ Channel.prototype.tryIPBan = function(actor, name, range) {
 
 Channel.prototype.unbanIP = function(actor, ip) {
     var self = this;
-    if(!self.hasPermission(actor, "ban"))
+    if(!self.hasPermission(actor, "ban")) {
+        actor.kick("Attempted unban with insufficient permission");
         return false;
+    }
 
     self.ipbans[ip] = null;
     self.users.forEach(function(u) {
@@ -748,11 +753,11 @@ Channel.prototype.unbanIP = function(actor, ip) {
 }
 
 Channel.prototype.tryUnban = function(actor, data) {
-    if(data.ip_hidden) {
+    if(typeof data.ip_hidden === "string") {
         var ip = this.hideIP(data.ip_hidden);
         this.unbanIP(actor, ip);
     }
-    if(data.name) {
+    if(typeof data.name === "string") {
         this.unbanName(actor, data.name);
     }
 }
@@ -1318,9 +1323,11 @@ Channel.prototype.tryQueue = function(user, data) {
         return;
     }
     if(typeof data.pos !== "string") {
+        user.kick("Bad queue packet");
         return;
     }
     if(typeof data.id !== "string" && data.id !== false) {
+        user.kick("Bad queue packet");
         return;
     }
 
@@ -1580,6 +1587,7 @@ Channel.prototype.tryQueuePlaylist = function(user, data) {
 
     if(typeof data.name !== "string" ||
        typeof data.pos !== "string") {
+        user.kick("Bad queuePlaylist packet");
         return;
     }
 
@@ -1639,6 +1647,7 @@ Channel.prototype.trySetTemp = function(user, data) {
         return;
     }
     if(typeof data.uid != "number" || typeof data.temp != "boolean") {
+        user.kick("Bad setTemp packet");
         return;
     }
 
@@ -1667,8 +1676,10 @@ Channel.prototype.tryDequeue = function(user, data) {
     if(!this.hasPermission(user, "playlistdelete"))
         return;
 
-    if(typeof data !== "number")
+    if(typeof data !== "number") {
+        user.kick("Bad delete packet");
         return;
+    }
 
     var plitem = this.playlist.items.find(data);
     if(plitem && plitem.media)
@@ -1682,6 +1693,7 @@ Channel.prototype.tryUncache = function(user, data) {
         return;
     }
     if(typeof data.id != "string") {
+        user.kick("Bad uncache packet");
         return;
     }
     if (!self.registered)
@@ -1723,6 +1735,7 @@ Channel.prototype.tryJumpTo = function(user, data) {
     }
 
     if(typeof data !== "number") {
+        user.kick("Bad jumpTo packet");
         return;
     }
 
@@ -1776,11 +1789,14 @@ Channel.prototype.tryShufflequeue = function(user) {
 
 Channel.prototype.tryUpdate = function(user, data) {
     if(this.leader != user) {
+        user.kick("Received mediaUpdate from non-leader");
         return;
     }
 
-    if(typeof data.id !== "string" || typeof data.currentTime !== "number")
-           return;
+    if(typeof data.id !== "string" || typeof data.currentTime !== "number") {
+        user.kick("Bad mediaUpdate packet");
+        return;
+    }
 
     if(this.playlist.current === null) {
         return;
@@ -1832,8 +1848,10 @@ Channel.prototype.tryMove = function(user, data) {
         return;
     }
 
-    if(typeof data.from !== "number" || (typeof data.after !== "number" && typeof data.after !== "string"))
+    if(typeof data.from !== "number" || (typeof data.after !== "number" && typeof data.after !== "string")) {
+        user.kick("Bad moveMedia packet");
         return;
+    }
 
     this.move(data, user);
 }
@@ -1845,7 +1863,8 @@ Channel.prototype.tryOpenPoll = function(user, data) {
         return;
     }
 
-    if(!data.title || !data.opts) {
+    if(typeof data.title !== "string" || !(data.opts instanceof Array)) {
+        user.kick("Invalid newPoll packet");
         return;
     }
 
@@ -1878,6 +1897,7 @@ Channel.prototype.tryVote = function(user, data) {
         return;
     }
     if(typeof data.option !== "number") {
+        user.kick("Bad vote packet");
         return;
     }
 
@@ -1952,8 +1972,10 @@ Channel.prototype.tryToggleLock = function(user) {
 }
 
 Channel.prototype.tryRemoveFilter = function(user, f) {
-    if(!this.hasPermission(user, "filteredit"))
-        return false;
+    if(!this.hasPermission(user, "filteredit")) {
+        user.kick("Attempted removeFilter with insufficient permission");
+        return;
+    }
 
     this.logger.log("%%% " + user.name + " removed filter: " + f.name);
     this.removeFilter(f);
@@ -1989,6 +2011,13 @@ Channel.prototype.updateFilter = function(filter, emit) {
 
 Channel.prototype.tryUpdateFilter = function(user, f) {
     if(!this.hasPermission(user, "filteredit")) {
+        user.kick("Attempted updateFilter with insufficient permission");
+        return;
+    }
+
+    if (typeof f.source !== "string" || typeof f.flags !== "string" ||
+        typeof f.replace !== "string") {
+        user.kick("Bad updateFilter packet");
         return;
     }
 
@@ -2006,8 +2035,8 @@ Channel.prototype.tryUpdateFilter = function(user, f) {
         return;
     }
     var filter = new Filter(f.name, f.source, f.flags, f.replace);
-    filter.active = f.active;
-    filter.filterlinks = f.filterlinks;
+    filter.active = !!f.active;
+    filter.filterlinks = !!f.filterlinks;
     this.logger.log("%%% " + user.name + " updated filter: " + f.name);
     this.updateFilter(filter);
 }
@@ -2026,16 +2055,21 @@ Channel.prototype.moveFilter = function(data) {
 }
 
 Channel.prototype.tryMoveFilter = function(user, data) {
-    if(!this.hasPermission(user, "filteredit"))
+    if(!this.hasPermission(user, "filteredit")) {
+        user.kick("Attempted moveFilter with insufficient permission");
         return;
+    }
 
-    if(typeof data.to !== "number" || typeof data.from !== "number")
+    if(typeof data.to !== "number" || typeof data.from !== "number") {
+        user.kick("Bad moveFilter packet");
         return;
+    }
     this.moveFilter(data);
 }
 
 Channel.prototype.tryUpdatePermissions = function(user, perms) {
     if(user.rank < 3) {
+        user.kick("Attempted setPermissions with insufficient permission");
         return;
     }
     for(var key in perms) {
@@ -2047,6 +2081,7 @@ Channel.prototype.tryUpdatePermissions = function(user, perms) {
 
 Channel.prototype.tryUpdateOptions = function(user, data) {
     if(user.rank < 2) {
+        user.kick("Attempted setOptions with insufficient permission");
         return;
     }
 
@@ -2083,9 +2118,14 @@ Channel.prototype.tryUpdateOptions = function(user, data) {
 
 Channel.prototype.trySetCSS = function(user, data) {
     if(user.rank < 3) {
+        user.kick("Attempted setChannelCSS with insufficient permission");
         return;
     }
 
+    if (typeof data.css !== "string") {
+        user.kick("Bad setChannelCSS packet");
+        return;
+    }
     var css = data.css || "";
     if(css.length > 20000) {
         css = css.substring(0, 20000);
@@ -2100,6 +2140,11 @@ Channel.prototype.trySetCSS = function(user, data) {
 
 Channel.prototype.trySetJS = function(user, data) {
     if(user.rank < 3) {
+        user.kick("Attempted setChannelJS with insufficient permission");
+        return;
+    }
+    if (typeof data.js !== "string") {
+        user.kick("Bad setChannelJS packet");
         return;
     }
 
@@ -2131,6 +2176,12 @@ Channel.prototype.updateMotd = function(motd) {
 
 Channel.prototype.tryUpdateMotd = function(user, data) {
     if(!this.hasPermission(user, "motdedit")) {
+        user.kick("Attempted setMotd with insufficient permission");
+        return;
+    }
+
+    if (typeof data.motd !== "string") {
+        user.kick("Bad setMotd packet");
         return;
     }
 
@@ -2241,11 +2292,15 @@ Channel.prototype.sendMessage = function(username, msg, msgclass, data) {
 
 Channel.prototype.trySetRank = function(user, data) {
     var self = this;
-    if(user.rank < 2)
+    if(user.rank < 2) {
+        user.kick("Attempted setChannelRank with insufficient permission");
         return;
+    }
 
-    if(typeof data.user !== "string" || typeof data.rank !== "number")
+    if(typeof data.user !== "string" || typeof data.rank !== "number") {
+        user.kick("Bad setChannelRank packet");
         return;
+    }
 
     if(data.rank >= user.rank)
         return;
@@ -2337,10 +2392,12 @@ Channel.prototype.changeLeader = function(name) {
 
 Channel.prototype.tryChangeLeader = function(user, data) {
     if(user.rank < 2) {
+        user.kick("Attempted assignLeader with insufficient permission");
         return;
     }
 
-    if(data.name == undefined) {
+    if(typeof data.name !== "string") {
+        user.kick("Bad assignLeader packet");
         return;
     }
 
