@@ -119,6 +119,11 @@ User.prototype.autoAFK = function () {
     }, self.channel.opts.afk_timeout * 1000);
 };
 
+User.prototype.kick = function (reason) {
+    this.socket.emit("kick", { reason: reason });
+    this.socket.disconnect(true);
+};
+
 User.prototype.initCallbacks = function () {
     var self = this;
     self.socket.on("disconnect", function () {
@@ -128,19 +133,19 @@ User.prototype.initCallbacks = function () {
     });
 
     self.socket.on("joinChannel", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel())
             return;
-        if (typeof data.name != "string")
+        if (typeof data.name != "string") {
+            self.kick("Bad joinChannel packet");
             return;
+        }
         if (!data.name.match(/^[\w-_]{1,30}$/)) {
             self.socket.emit("errorMsg", {
                 msg: "Invalid channel name.  Channel names may consist of"+
                      " 1-30 characters in the set a-z, A-Z, 0-9, -, and _"
             });
-            self.socket.emit("kick", {
-                reason: "Bad channel name"
-            });
-
+            self.kick("Invalid channel name");
             return;
         }
         data.name = data.name.toLowerCase();
@@ -156,9 +161,10 @@ User.prototype.initCallbacks = function () {
     });
 
     self.socket.on("login", function (data) {
-        var name = data.name || "";
-        var pw = data.pw || "";
-        var session = data.session || "";
+        data = (typeof data !== "object") ? {} : data;
+        var name = (typeof data.name === "string") ? data.name : "";
+        var pw = (typeof data.pw === "string") ? data.pw : "";
+        var session = (typeof data.session === "string") ? data.session : "";
         if (pw.length > 100)
             pw = pw.substring(0, 100);
 
@@ -186,52 +192,32 @@ User.prototype.initCallbacks = function () {
     });
 
     self.socket.on("assignLeader", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryChangeLeader(self, data);
         }
     });
 
-    self.socket.on("promote", function (data) {
-        if (self.inChannel()) {
-            self.channel.tryPromoteUser(self, data);
-        }
-    });
-
-    self.socket.on("demote", function (data) {
-        if (self.inChannel()) {
-            self.channel.tryDemoteUser(self, data);
-        }
-    });
-
     self.socket.on("setChannelRank", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.trySetRank(self, data);
         }
     });
 
-    self.socket.on("banName", function (data) {
-        if (self.inChannel()) {
-            self.channel.banName(self, data.name || "");
-        }
-    });
-
-    self.socket.on("banIP", function (data) {
-        if (self.inChannel()) {
-            self.channel.tryIPBan(self, data);
-        }
-    });
-
     self.socket.on("unban", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryUnban(self, data);
         }
     });
 
     self.socket.on("chatMsg", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             if (typeof data.msg !== "string") {
                 self.socket.emit("kick", {
-                    reason: "Invalid chatMsg packet!"
+                    reason: "Invalid chatMsg packet"
                 });
                 self.socket.disconnect(true);
                 return;
@@ -245,6 +231,7 @@ User.prototype.initCallbacks = function () {
     });
 
     self.socket.on("newPoll", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryOpenPoll(self, data);
         }
@@ -263,36 +250,42 @@ User.prototype.initCallbacks = function () {
     });
 
     self.socket.on("queue", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryQueue(self, data);
         }
     });
 
     self.socket.on("setTemp", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.trySetTemp(self, data);
         }
     });
 
     self.socket.on("delete", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryDequeue(self, data);
         }
     });
 
     self.socket.on("uncache", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryUncache(self, data);
         }
     });
 
     self.socket.on("moveMedia", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryMove(self, data);
         }
     });
 
     self.socket.on("jumpTo", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryJumpTo(self, data);
         }
@@ -323,14 +316,20 @@ User.prototype.initCallbacks = function () {
     });
 
     self.socket.on("mediaUpdate", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryUpdate(self, data);
         }
     });
 
     self.socket.on("searchMedia", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
-            if (data.source == "yt") {
+            if (typeof data.query !== "string") {
+                self.kick("Bad searchMedia packet");
+                return;
+            }
+            if (data.source === "yt") {
                 var searchfn = InfoGetter.Getters.ytSearch;
                 searchfn(data.query.split(" "), function (e, vids) {
                     if (!e) {
@@ -358,6 +357,7 @@ User.prototype.initCallbacks = function () {
     });
 
     self.socket.on("vote", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryVote(self, data);
         }
@@ -378,52 +378,64 @@ User.prototype.initCallbacks = function () {
         if (!self.inChannel()) {
             return;
         }
+        if (self.rank < 10) {
+            self.kick("Attempted unregisterChannel with insufficient permission");
+            return;
+        }
         self.channel.unregister(self);
     });
 
     self.socket.on("setOptions", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryUpdateOptions(self, data);
         }
     });
 
     self.socket.on("setPermissions", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryUpdatePermissions(self, data);
         }
     });
 
     self.socket.on("setChannelCSS", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.trySetCSS(self, data);
         }
     });
 
     self.socket.on("setChannelJS", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.trySetJS(self, data);
         }
     });
 
     self.socket.on("updateFilter", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryUpdateFilter(self, data);
         }
     });
 
     self.socket.on("removeFilter", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryRemoveFilter(self, data);
         }
     });
 
     self.socket.on("moveFilter", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryMoveFilter(self, data);
         }
     });
 
     self.socket.on("setMotd", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryUpdateMotd(self, data);
         }
@@ -456,12 +468,14 @@ User.prototype.initCallbacks = function () {
     });
 
     self.socket.on("voteskip", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryVoteskip(self);
         }
     });
 
     self.socket.on("listPlaylists", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.name === "" || self.rank < 1) {
             self.socket.emit("listPlaylists", {
                 pllist: [],
@@ -483,6 +497,11 @@ User.prototype.initCallbacks = function () {
     });
 
     self.socket.on("savePlaylist", function (data) {
+        data = (typeof data !== "object") ? {} : data;
+        if (typeof data.name !== "string") {
+            self.kick("Bad savePlaylist packet");
+            return;
+        }
         if (self.rank < 1) {
             self.socket.emit("savePlaylist", {
                 success: false,
@@ -533,13 +552,16 @@ User.prototype.initCallbacks = function () {
     });
 
     self.socket.on("queuePlaylist", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (self.inChannel()) {
             self.channel.tryQueuePlaylist(self, data);
         }
     });
 
     self.socket.on("deletePlaylist", function (data) {
+        data = (typeof data !== "object") ? {} : data;
         if (typeof data.name != "string") {
+            self.kick("Bad deletePlaylist packet");
             return;
         }
 
